[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/shooter/gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/shooter/decrease_accuracy_while_shooting.gd" type="Script" id=2]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=3]

[sub_resource type="Image" id=4]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 227, 99, 255, 255, 57, 8, 255, 0, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0
image = SubResource( 4 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 2 )

[node name="uzi" instance=ExtResource( 1 )]
__meta__ = {
"_edit_pinned_properties_": [ "cooldown" ]
}
cooldown = 0.1
automatic = true

[node name="Sprite" parent="." index="0"]
material = SubResource( 3 )

[node name="muzzle" parent="." index="1"]
__meta__ = {
"_edit_pinned_properties_": [ "override_damage" ]
}
spread_degrees = 5.0
recoil = 1.0
override_damage = 2.0

[node name="decrease_accuracy_while_shooting" type="Node" parent="muzzle" index="0"]
script = ExtResource( 2 )
max_accumulable = 30.0

[connection signal="shoot" from="." to="muzzle/decrease_accuracy_while_shooting" method="_on_shoot"]
[connection signal="trigger_pressed" from="." to="muzzle/decrease_accuracy_while_shooting" method="_on_trigger_pressed"]
[connection signal="trigger_released" from="." to="muzzle/decrease_accuracy_while_shooting" method="_on_trigger_released"]
